# simple-langgraph-app

./: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt
app/: __init__.py  agent.py
